<?xml version="1.0" encoding="utf-8"?>
<!--activity_login.xml-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_background_highContrast"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="106dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="Healing Yuk!"
        android:textAlignment="center"
        android:textColor="@color/md_theme_onPrimaryFixed"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/sign_in"
                android:textColor="@color/md_theme_inverseSurface"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:boxStrokeColor="@color/md_theme_inverseSurface_highContrast"
                app:hintTextColor="@color/md_theme_inverseSurface_highContrast">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                app:boxStrokeColor="@color/md_theme_inverseSurface_highContrast"
                app:hintTextColor="@color/md_theme_inverseSurface_highContrast"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:backgroundTint="@color/md_theme_onBackground_mediumContrast"
                android:text="@string/submit"
                android:textSize="16sp"
                app:cornerRadius="28dp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="@color/md_theme_onBackground_highContrast" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up"
            android:textColor="@color/md_theme_onPrimaryContainer"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>